feat: adds media query for pagr header text @ max width 600px

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
     <header>
-        <p class="header-text">Home</p>
+        <p class="header-text">Home <span class="small color-blue"> / search for anything on twitter<span></p>
     </header>
     <main>
         <div class="main-container">
