change: changes search button type

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         <!-- <span class="material-icons timeline-search-icon">search</span> -->
                     </div>
                     <p class="timeline-search-error"></p>
-                    <button class="timeline-search-button" id="timeline-search-button">Search</button>
+                    <button class="timeline-search-button" id="timeline-search-button" type="search">Search</button>
                 </div>
                 <div class="collections-page hide">
                     <!-- <h1 class="collections-page-header">Your collections</h1> -->
