--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         <div class="save-to-collection-prompt modal hide">
             <svg class="save-to-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p class="save-to-collection-header">Your collections</p>
+            <div class = "create-collection-from-modal hide">
+                <p>You don't have any collections yet.</p>
+                <p>Create a new one to get started.</p>
+                <input class="create-col-from-modal-input" type="text" placeholder="Collection name" onkeydown = "if (event.keyCode == 13)
+                document.querySelector('.create-col-from-modal-btn').click()">
+                <p class="create-col-from-modal-error error" ></p>
+                <button class="create-col-from-modal-btn">Create</button>
+            </div>
             <div class="save-to-collection-item-div">
                 <p class="collection-login-prompt">Please <span class="login-from-modal color-blue">login</span> to use this feature</p>
                 <!-- <p class="save-to-collection-item">Collection Two</p>
