--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
             <svg class="save-to-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p class="save-to-collection-header">Your collections</p>
             <div class = "create-collection-from-modal hide">
-                <p>You don't have any collections yet.</p>
-                <p>Create a new one to get started.</p>
-                <input class="create-col-from-modal-input" type="text" placeholder="Collection name" onkeydown = "if (event.keyCode == 13)
+                <input class="create-col-from-modal-input" enterkeyhint="go" type="text" placeholder="Create a new collection" onkeydown = "if (event.keyCode == 13)
                 document.querySelector('.create-col-from-modal-btn').click()">
+                <button class="create-col-from-modal-btn hide" id="create-col-from-modal-btn"></button>
+                <svg class="create-col-from-modal-btn" id="create-col-from-modal-btn" viewBox="0 0 18 18"><path d="M 16,0 H 2 C 0.89,0 0,0.9 0,2 v 14 c 0,1.1 0.89,2 2,2 h 14 c 1.1,0 2,-0.9 2,-2 V 2 C 18,0.9 17.1,0 16,0 Z m -2,10 h -4 v 4 H 8 V 10 H 4 V 8 H 8 V 4 h 2 v 4 h 4 z" id="path60"/></svg>
                 <p class="create-col-from-modal-error error" ></p>
-                <button class="create-col-from-modal-btn">Create</button>
             </div>
             <div class="save-to-collection-item-div">
                 <p class="collection-login-prompt">Please <span class="login-from-modal color-blue">login</span> to use this feature</p>
