feat: adds markup for forgot password

--- a/index.html
+++ b/index.html
@@ -120,7 +120,17 @@
                             <p class="login-errors auth-error"></p>
                             <button class="login-btn">Log in</button>
                             <p class="action-here">Don't have an account? <span class="signup-here auth-link">Sign up here</span>.</p>
-                            <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the twtr  &middot; spotlight app.</p>
+                            <!-- <p class="forgot-password action-here color-blue">Forgot your password?</p> -->
+                            <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of this app.</p>
+                        </div>
+                    </form>
+                    <form action="javascript:void(0);">
+                        <div class="forgot-password-div hide">
+                            <svg class="forgot-password-div-close close auth-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
+                            <input type="text" class="forgot-password-email auth-input go-input" id="forgot-password-email" placeholder="Email" spellcheck="false">
+                            <label for="forgor-password-email">Email:</label>
+                            <button class="forgot-password-btn">Continue</button>
+                            <p class="forgot-password-message"></p>
                         </div>
                     </form>
                     <form action="javascript:void(0);">
@@ -138,7 +148,7 @@
                             <p class="signup-errors auth-error"></p>
                             <button class="signup-btn">Sign up</button>
                             <p class="action-here">Already have an account? <span class="login-here auth-link">Log in here</span>.</p>
-                            <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of the twtr  &middot; spotlight app.</p>
+                            <p class="account-warning">This does not refer to your twitter account details. This is an account to allow you use extra features of this app.</p>
                         </div>
                     </form>
                     <div class="logout-div hide">
