--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <script src="build/jwt-decode.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
-    <script type="module" src="./src/scripts/script.js" defer></script>
-    <!-- <script type="module" src="/src/scripts/validators.js"></script> -->
+    <script type="module" src="./build/script.bundle.js" defer></script>
 
     <title>Document</title>
 </head>
