feat: adds function to truncate names that are too long

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="./src/css/main.css">
     <!-- <link rel="stylesheet" href="./src/css/prefixer.css"> -->
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="build/jwt-decode.min.js"></script>
-    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <!-- <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script> -->
 
     <script type="module" src="./build/script.bundle.js" defer></script>
 
