--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     
-
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/main.css">
-    <!-- <link rel="stylesheet" href="./src/css/prefixer.css"> -->
-
-    <!-- <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script> -->
-
-    <script type="module" src="./build/script.bundle.js" defer></script>
+    <script src="./build/script.bundle.js" defer></script>
 
     <title>Document</title>
 </head>
@@ -97,7 +90,11 @@
                     <div class="about-modal modal hide">
                         <svg class="about-modal-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
                         <!-- <p class="about-header">About </p> -->
-                        <p class ="about-text">twtr  &middot; spotlight is an app that simplifies searching for tweets on Twitter. You can also use the timeline search to get tweets from a specific user.<br><br>You can save tweets to collections to view later.</p>
+                        <p class ="about-text">twtr  &middot; spotlight is an app that simplifies searching for tweets on Twitter. You can also use the timeline search to get tweets from a specific user.<br><br>You can save tweets to your collections to view later.</p>
+                        <div class="made-by-mobile">
+                            <p class="made-by">Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a></p>
+                            <p>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></p>
+                        </div>
                     </div>
                 </div>
                 <div class="user-profile side-nav-item">
@@ -348,7 +345,7 @@
             </div>
         </div>
     </main>
-    <footer class="hide">
+    <footer class="">
         <p class="big-footer">
             <span>Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a>  ::  </span><span>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></span>
         </p>
