change: minor changes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    
-    <script src="./build/script.bundle.js" defer></script>
-
-    <title>Document</title>
+    <title> twtr  &middot; spotlight </title>
 </head>
 
 <body ontouchstart="">
@@ -30,7 +27,7 @@
         <svg class="session-over-modal-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
         <p>Your current session expired, please login to continue.</p>
     </div>
-    <section>
+    <div>
         <div class="save-to-collection-prompt modal hide">
             <svg class="save-to-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p class="save-to-collection-header">Your collections</p>
@@ -42,7 +39,7 @@
                 <p class="create-col-from-modal-error error" ></p>
             </div>
             <div class="save-to-collection-item-div">
-                <p class="collection-login-prompt">Please <span class="login-from-modal color-blue">login</span> to use this feature</p>
+                <p class="collection-login-prompt">You need to <span class="login-from-modal color-blue">login</span> to use this feature</p>
                 <!-- <p class="save-to-collection-item">Collection Two</p>
                 <p class="save-to-collection-item">Collection Two</p>
                 <p class="save-to-collection-item">Collection Two</p>
@@ -50,8 +47,8 @@
                 <p class="save-to-collection-item">Collection Two</p> -->
             </div>
         </div>
-    </section>
-    <section>
+    </div>
+    <div>
         <div class="remove-from-collection-prompt modal hide">
             <svg class="remove-from-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p>Are you sure?</p>
@@ -60,7 +57,7 @@
                 <button class="remove-prompt-delete">Delete, please</button>
             </div>
         </div>
-    </section>
+    </div>
 
 
 
@@ -349,10 +346,6 @@
         <p class="big-footer">
             <span>Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a>  ::  </span><span>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></span>
         </p>
-        <div class="made-by-mobile">
-            <p class="made-by">Made with &hearts; by <a target="_blank" href="lekeodewuyi.com" class="web-link">Leke Odewuyi &copy; 2020</a></p>
-            <p>Send feedback and suggestions to <a href="mailto:hello@lekeodewuyi.com">hello@lekeodewuyi.com</a></p>
-        </div>
     </footer> 
 </div>       
 </body>
