fix: fixes safari flex box

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <title> twtr  &middot; spotlight </title>
+
+    <link rel="stylesheet" href="./src/css/main.css">
+    <script src="./build/script.bundle.js" async></script>
 </head>
 
 <body ontouchstart="">
@@ -260,11 +263,6 @@
                                     <img src="./assets/lightning-5511473_640.jpg" alt="Tweet Media">
                                 </div>
                                 <div  class="tweet-image">
-                                    <video controls>
-                                        <source src="https://video.twimg.com/ext_tw_video/1300910729998991361/pu/vid/360x366/pX4ei4kPnH-cdB1C.mp4?tag=10"
-                                                type="video/mp4">
-                                        Sorry, your browser doesn't support embedded videos.
-                                    </video>
                                 </div>
                                 <div>
                                     <div class="tweet-footer">
