--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input class="create-col-from-modal-input" enterkeyhint="go" type="text" placeholder="Create a new collection" onkeydown = "if (event.keyCode == 13)
                 document.querySelector('.create-col-from-modal-btn').click()">
                 <button class="create-col-from-modal-btn hide" id="create-col-from-modal-btn"></button>
-                <svg class="create-col-from-modal-btn" id="create-col-from-modal-btn" viewBox="0 0 18 18"><path d="M 16,0 H 2 C 0.89,0 0,0.9 0,2 v 14 c 0,1.1 0.89,2 2,2 h 14 c 1.1,0 2,-0.9 2,-2 V 2 C 18,0.9 17.1,0 16,0 Z m -2,10 h -4 v 4 H 8 V 10 H 4 V 8 H 8 V 4 h 2 v 4 h 4 z" id="path60"/></svg>
+                <svg class="create-col-from-modal-btn" id="create-col-from-modal-btn" viewBox="0 0 18 18" width="39.9px" height="39.9px"><path d="M 16,0 H 2 C 0.89,0 0,0.9 0,2 v 14 c 0,1.1 0.89,2 2,2 h 14 c 1.1,0 2,-0.9 2,-2 V 2 C 18,0.9 17.1,0 16,0 Z m -2,10 h -4 v 4 H 8 V 10 H 4 V 8 H 8 V 4 h 2 v 4 h 4 z" id="path60"/></svg>
                 <p class="create-col-from-modal-error error" ></p>
             </div>
             <div class="save-to-collection-item-div">
