feat: adds functionality to show images and videos only when there is no content blocker
the profile images are replaced with twitter's default
and other kinds of media are left out.
There is also a text to let the user know what is going on

--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                     <p class="empty-collection"></p>
                 </div>
                 <div class="search-results hide">
+                    <div class="media-error hide">Your browser are currently using a content blocker which is preventing images and videos from Twitter's media hosting domain(pbs.twimg.com) from being displayed. You can click the link on the tweet to view the media on Twitter or whitelist this website to fully enjoy the features of this app.</div>
                     <div class=tweet-results-div>
                         <div class="tweet-result">
                             <div class="tweet-user-image">
