--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class = "screen-fade hide"></div>
 
-    <div class="media-modal modal hide">
+    <div class="media-modal modal hide in-app-modal">
         <svg class="media-modal-close clos" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
         <div class="media">
         </div>
@@ -27,7 +27,7 @@
         <p>Your current session expired, please login to continue.</p>
     </div>
     <div>
-        <div class="save-to-collection-prompt modal hide">
+        <div class="save-to-collection-prompt modal hide in-app-modal">
             <svg class="save-to-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p class="save-to-collection-header">Your collections</p>
             <div class = "create-collection-from-modal hide">
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div>
-        <div class="remove-from-collection-prompt modal hide">
+        <div class="remove-from-collection-prompt modal hide in-app-modal">
             <svg class="remove-from-collection-close close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"/></svg>
             <p>Are you sure?</p>
             <div class="remove-prompt-buttons">
